--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -22,12 +22,12 @@
   <body>
     <div class="text">
       <h1>
-        Endaufgabe
+        Endaufgabe AR-Anwendung
       </h1>
       <h4>
         Evaluieren und Verbessern Sie den AR Prototypen aus diesem Semester
       </h4>
-      
+      <br/>
       <h3>Wie würde die VR-Anwendung genutzt werden?</h3>
       <p>
         Nur auf Instagram bzw. eventuell Facebook, da die AR-Anwendung nur dort
@@ -35,7 +35,7 @@
       </p>
 
       <div class="videobox">
-        <video class="videohoch"src="img/3.MOV" controls></video>
+        <video class="videohoch" src="img/3.MOV" controls></video>
       </div>
 
       <h3>
@@ -52,7 +52,7 @@
       </p>
 
       <div class="videobox">
-        <video class="videohoch"src="img/1.mp4" controls></video>
+        <video class="videohoch" src="img/1.mp4" controls></video>
       </div>
 
       <h2>
@@ -63,10 +63,170 @@
         Produkt (Prototypen) und dem Nutzer zu visualisieren.
       </h3>
 
-      <img src="img/1.png" alt="Storyboard" width="100%" />
+      <div class="card card-1">
+        <h5>1. Instagram öffnen</h5>
+        <div class="cj">
+          <p>
+            Storys von abonnierten Usern sind direkt im Blickfeld des Nutzers
+          </p>
+          <p>Der Nutzer klickt auf die erste Story</p>
+          <p>Der Nutzer wird daraufhin von einer zur nächsten weitergeleitet</p>
+        </div>
+        <img
+          src="img/cj/main.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;"
+        />
+      </div>
+      <div class="card card-1">
+        <h5>2. Auf Filter stoßen</h5>
+        <div class="cj">
+          <p>Storys von Freunden und sonstigen abonnierten Usern anschauen</p>
+          <p>Filter geschickt bekommen per DM</p>
+          <p>Effekt teilen über WhatsApp, Nachrichten, Mail und weitere</p>
+        </div>
+        <img
+          src="img/cj/story.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+          margin: auto;
+          left: 0;
+          right: 0;"
+        />
+      </div>
 
+      <div class="card card-1">
+        <h5>3. Filter öffnen</h5>
+        <div class="cj">
+          <p>
+            Auf den in der Story verlinkten Filter klicken, um mehr Details zu
+            öffen
+          </p>
+          <p>
+            Dort werden dem Nutzer verschiedene Optionen geboten, um den Filter
+            auszuprobieren und zu teilen sowie neue Filter zu entdecken
+          </p>
+        </div>
+        <img
+          src="img/cj/details.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+          margin: auto;
+          left: 0;
+          right: 0;"
+        />
+      </div>
 
-  
+      <div class="card card-1">
+        <h5>4. Filter ausprobieren</h5>
+        <div class="cj">
+          <p>
+            Eine der Optionen ist, den Filter auf der eigenen Kamera
+            ausprobieren und ein Bild oder Video in Story teilen
+          </p>
+          <p>
+            Eventuell den Filter speichern, um ihn zu einem späterem Zeitpunkt
+            wiederzufinden
+          </p>
+        </div>
+        <img
+          src="img/cj/try.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;"
+        />
+      </div>
+
+      <div class="card card-1">
+        <h5>5. Filter verschicken</h5>
+        <div class="cj">
+          <p>
+            Hier kann der Nutzer den Filter über verschieden Plattformen
+            weiterleiten
+          </p>
+        </div>
+        <img
+          src="img/cj/teilen.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+              margin: auto;
+              left: 0;
+              right: 0;"
+        />
+      </div>
+
+      <div class="card card-1">
+        <h5>6. Effektlink teilen</h5>
+        <div class="cj">
+          <p>
+            Hier kann der Nutzer den Filter über Instagram Direct Message
+            weiterleiten
+          </p>
+        </div>
+        <img
+          src="img/cj/schicken.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+                  margin: auto;
+                  left: 0;
+                  right: 0;"
+        />
+      </div>
+
+      <div class="card card-1">
+        <h5>7. Effekte durchstöbern</h5>
+        <div class="cj">
+          <p>
+            Hier kann der Nutzer Filter und User suchen sowie in Kategorien
+            stöbern
+          </p>
+        </div>
+        <img
+          src="img/cj/stöbern.PNG"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+                    margin: auto;
+                    left: 0;
+                    right: 0;"
+        />
+      </div>
+
+      <div class="card card-1">
+        <h5>8. Mehr Filter vom Creator</h5>
+        <div class="cj">
+          <p>
+            Hier kann der Nutzer die weiteren Filter des Creators durchstöbern
+          </p>
+        </div>
+        <img
+          src="img/cj/mehr.png"
+          alt="Feed"
+          style="width: 38%; margin-bottom: 0%;position: absolute;
+                      margin: auto;
+                      left: 0;
+                      right: 0;"
+        />
+      </div>
+
+      <h3>Zusammenfassung eines möglichen Ablaufs einer Costumer Journey:</h3>
+
+      <p>
+        Der Nutzer – in diesem Fall ich selbst – stöbert duch die Effekte und
+        findet in einer der Kategorien ein interessantes AR-Game. Es wird
+        angeboten den Effekt zu speichern, um ihn später wiederzufinden, den
+        Effekt an Freunde zu verschicken sowie mehr Filter des Creators zu
+        entdecken. Nachdem ein Video mit dem Effekt aufgenommen wurde, kann
+        dieses mit Freunden oder in der eigenen Story geteilt werden.
+      </p>
+
+      <div class="videobox">
+        <video class="videohoch" src="img/2.mp4" controls></video>
+      </div>
 
       <h2>Empirischer Nutzertest</h2>
 
