umfrage und ergebnisse

--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -27,7 +27,8 @@
       <h4>
         Evaluieren und Verbessern Sie den AR Prototypen aus diesem Semester
       </h4>
-      <br/>
+      <br />
+
       <h3>Wie würde die VR-Anwendung genutzt werden?</h3>
       <p>
         Nur auf Instagram bzw. eventuell Facebook, da die AR-Anwendung nur dort
@@ -62,7 +63,6 @@
         Erstellen Sie eine Customer Journey Map, um die Touchpoints zwischen dem
         Produkt (Prototypen) und dem Nutzer zu visualisieren.
       </h3>
-
       <div class="card card-1">
         <h5>1. Instagram öffnen</h5>
         <div class="cj">
@@ -142,7 +142,7 @@
         />
       </div>
 
-      <div class="card card-1">
+      <div class="cardshort card-1">
         <h5>5. Filter verschicken</h5>
         <div class="cj">
           <p>
@@ -160,7 +160,7 @@
         />
       </div>
 
-      <div class="card card-1">
+      <div class="cardshort card-1">
         <h5>6. Effektlink teilen</h5>
         <div class="cj">
           <p>
@@ -178,7 +178,7 @@
         />
       </div>
 
-      <div class="card card-1">
+      <div class="cardshort card-1">
         <h5>7. Effekte durchstöbern</h5>
         <div class="cj">
           <p>
@@ -196,7 +196,7 @@
         />
       </div>
 
-      <div class="card card-1">
+      <div class="cardshort card-1">
         <h5>8. Mehr Filter vom Creator</h5>
         <div class="cj">
           <p>
@@ -213,7 +213,7 @@
         />
       </div>
 
-      <h3>Zusammenfassung eines möglichen Ablaufs einer Costumer Journey:</h3>
+      <h3>Zusammenfassung eines möglichen Ablaufs einer Costumer Journey</h3>
 
       <p>
         Der Nutzer – in diesem Fall ich selbst – stöbert duch die Effekte und
@@ -230,7 +230,171 @@
 
       <h2>Empirischer Nutzertest</h2>
 
+      <h3>Studienkonzept/Research Plan</h3>
+
+      <h6>Projekt</h6>
+      <p>
+        Es handelt sich um einen AR-Minispiel, das über Instagram und Facebook
+        abgerufen werden kann. Ich ließ mich hier von dem Spiel "Who is more
+        likely to..." (auf Deutsch "Wer würde eher...") inspirieren.
+      </p>
+
+      <h6>Zielgruppe</h6>
+      <p>
+        In erster Linie werden Instagram/Facebook-Nutzer angesprochen, die
+        Effekte/Filter nutzen. Die Fragen in diesem Beispiel sind für Designer
+        ausgelegt, können aber nach Belieben im Nachgang angepasst werden und
+        für eine breitere Zielgruppe ausgelegt werden. In diesem Test steht aber
+        (für mich) nicht der Inhalt der Fragen im Vordergrund, sondern die
+        Handhabung des Spiels.
+      </p>
+
+      <h6>Testobjekt</h6>
+      <p>
+        Version mit fünf Fragen für Designer
+      </p>
+
+      <h6>Fragestellung/Studienziel</h6>
+      <p>
+        Ist die Anwendung interessant gestaltet und visuell ansprechend? Was
+        fehlt der Anwendung? Würdest Du die Anwendung nutzen und eventuell auf
+        Instagram/Facebook posten?
+      </p>
+
+      <h3>Testkonzept</h3>
+
+      <h6>Was will ich wissen?</h6>
+      <p>Was an der Anwendung optimiert werden muss.</p>
+
+      <h6>Welche und wie viele Teilnehmer gibt es?</h6>
+      <p>
+        Vier Teilnehmer (aus dem Medienbereich und anderen Bereichen (nicht
+        medien bewandt)
+      </p>
+
+      <h6>Wie lange dauern die Sitzungen?</h6>
+      <p>Circa 10-15 Minuten</p>
+
+      <h6>Welche Aufgaben sollen die Probanden lösen?</h6>
+      <p>
+        Der AR-Filter soll ausprobiert werden mit und mit der
+        Think-Aloud-Methode laut dokumentiert werden. Im Anschluss soll ein
+        Fragebogen ausgefüllt werden.
+      </p>
+
+      <h3>Durchführung</h3>
+
+      <p>Beim Testing war mir wichtig, dass</p>
+      <ul>
+        <li>eine natürliche Testsituation entsteht.</li>
+        <li>
+          die Probanden sich so verhalten, wie sie es auch außerhalb des Tests
+          tun würden.
+        </li>
+        <li>die Ergebnisse repräsentativ für die echte Nutzung sind.</li>
+        <li>
+          ich Ergebnisse herausziehen kann, die mir bei der Optimierung helfen.
+        </li>
+      </ul>
+
+      <h3>Usability Testing AR-Minigame</h3>
+
+      <p>
+        Ich habe mich dazu entschieden, den Filter immer von jeweils zwei
+        Probanden gleichzeitig testen zu lassen, da der Filter für zwei Personen
+        ausgelegt ist.
+      </p>
+
+      <p>
+        Im ersten Schritt sollen die Probanden selbstständig den Filter öffnen
+        und benutzen. Dabei sollen sie mit der Think-Aloud-Methode Ihre Gedanken
+        laut dokumentieren. So werden realitätsnahe Ergebnisse darüber gewonnen,
+        wie die Probanden unter dem Eindruck der vertrauten Umgebung reagiert.
+      </p>
+
+      <div class="videobox2">
+        <video class="videohoch2" src="img/KundN.mp4" controls></video>
+        <video class="videohoch2" src="img/OundC.mp4" controls></video>
+      </div>
+
+      <p>
+        Im Nachgang dürfen sie mir mündlich direktes Feedback geben und den
+        folgenden Fragebogen ausfüllen. Dabei konnte der Proband je nach
+        Fragetyp auf einer Skala bewerten oder mit einer Kurzantwort
+        respondieren.
+      </p>
+      <ol>
+        <li>Wie oft verwendest Du Instagram-Filter?</li>
+        <li>Wie würdest Du den Effekt als Ganzes benoten?</li>
+        <li>Wie gut hat Dir die Gestaltung gefallen?</li>
+        <li>Was würdest Du an der Gestaltung ändern?</li>
+        <li>Wie haben Dir die Inhalte gefallen?</li>
+        <li>Wie schnell war der Effekt für Dich verständlich?</li>
+        <li>Würdest Du den Filter privat nutzen?</li>
+        <li>Falls nicht, warum?</li>
+        <li>Was hat Dir gut gefallen?</li>
+        <li>Was findest Du verbesserungswürdig?</li>
+        <li>Drei Adjektive, die den Effekt für Dich beschreiben:</li>
+      </ol>
+
+      <h3>Findings (Think-Aloud-Methode)</h3>
+      <ul>
+        <li>
+          Probanden wissen nicht wie man beginnt → Anleitung (z.B.
+          gleichzeitiges Kopfdrehen) → habe ich direkt nach dem ersten Testing
+          umgesetzt
+        </li>
+        <li>verstehen nicht direkt wie man abstimmt, bzw. Ziel des Spiels</li>
+        <li>
+          Warum ist nur bei einer Person der Text übern Kopf” → bei beiden bzw.
+          über beiden
+        </li>
+        <li>
+          Entscheidung zwischen Person A / Person B nicht bewusst → Anleitung am
+          Anfang: “Stimmt ab auf wen das eher zutrifft” bzw. “Beantworte die
+          Frage”
+        </li>
+      </ul>
+
+      <h3>Top-Findings (Fragebogen)</h3>
+
+      <ul>
+        <li>Anleitung für den Start für Neulinge</li>
+        <ul>
+          <li>“Neige Deine Kopf.”</li>
+          <li>"Stimmt ab, auf wen die Aussage eher zutrifft."</li>
+        </ul>
+        <li>
+          Die Frage soll entweder zwischen den Köpfen platziert werden statt nur
+          auf einer Person fixiert zu sein
+        </li>
+
+        <li>
+          Positiv aufgenommen, dass der Filter für zwei User ausgelegt ist
+        </li>
+        <li>schnelle Reaktionszeit des Filters</li>
+        <li>
+          Adjektive: spaßig, farbenfroh, aktuell, einfach, unkompliziert,
+          interessant, schnell
+        </li>
+      </ul>
+
       <h2>Prototyp Enhancement</h2>
+
+      <h3>1. Anleitung Kopf neigen</h3>
+      <p>
+        Schon im Anschluss des ersten Usability Testings habe ich eine Anleitung
+        des Filter hinzugefügt. Dies habe ich über “Capabilities > Instructions
+        > Neige Deinen Kopf zur Seite” einstellen können. So wird die Anweisung
+        so lange angezeigt, bis der User diese durchführt.
+      </p>
+
+      <video style="width: 100%" src="img/4.MOV" controls></video>
+
+      <h3>2. Anleitung Spiel</h3>
+
+    
+
     </div>
   </body>
 </html>
