--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -393,8 +393,19 @@
 
       <h3>2. Anleitung Spiel</h3>
 
-    
+      <p>
+        Als Nächstes habe ich den Fragen eine Spielanleitung vorangestellt:
+        “Vote who is more likely to do that” (“Stimmt ab auf wen das eher
+        zutrifft”). Diese wird angezeigt bis man beginnt aufzunehmen. Das habe
+        ich durch Camera > Video Recording > Turn on > Not > Visible (bei Video
+        Aufnahme) und Camera > Photo Captured > Turn on > Not > Visible (bei
+        einem Foto) eingestellt.
+      </p>
 
+      <div class="videobox">
+        <img style="width: 40%" src="img/2.PNG" controls />
+      </div>
+      <img style="width: 100%" src="img/3.PNG" controls />
     </div>
   </body>
 </html>
