--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -402,10 +402,18 @@
         einem Foto) eingestellt.
       </p>
 
-      <div class="videobox">
-        <img style="width: 40%" src="img/2.PNG" controls />
-      </div>
       <img style="width: 100%" src="img/3.PNG" controls />
+
+      <h3>3. Frage zwischen den Köpfen fixiert</h3>
+      <p>
+        Zum Schluss habe ich die Fragenblase über den Köpfen fixiert, damit sie
+        über beiden Spielern schwebt. Dafür habe ich einfach die Planes der
+        Fragen aus dem FaceTracker genommen.
+      </p>
+      <img style="width: 100%" src="img/4.PNG" controls />
+      <div class="videobox">
+        <video class="videohoch" src="img/end.mp4" controls></video>
+      </div>
     </div>
   </body>
 </html>
