--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -187,7 +187,7 @@
           </p>
         </div>
         <img
-          src="img/cj/stöbern.PNG"
+          src="img/cj/stöbern.png"
           alt="Feed"
           style="width: 38%; margin-bottom: 0%;position: absolute;
                     margin: auto;
@@ -402,7 +402,7 @@
         einem Foto) eingestellt.
       </p>
 
-      <img style="width: 100%" src="img/3.PNG" controls />
+      <img style="width: 100%" src="img/3.png" controls />
 
       <h3>3. Frage zwischen den Köpfen fixiert</h3>
       <p>
@@ -410,7 +410,7 @@
         über beiden Spielern schwebt. Dafür habe ich einfach die Planes der
         Fragen aus dem FaceTracker genommen.
       </p>
-      <img style="width: 100%" src="img/4.PNG" controls />
+      <img style="width: 100%" src="img/4.png" controls />
       <div class="videobox">
         <video class="videohoch" src="img/end.mp4" controls></video>
       </div>
