Zip Datei un co

--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -414,6 +414,26 @@
       <div class="videobox">
         <video class="videohoch" src="img/end.mp4" controls></video>
       </div>
+
+      <h2>Endprodukt</h2>
+
+      <p>
+        Um den finalen AR-Filter selbst auszuprobieren, <a
+          href="https://www.instagram.com/ar/1581908498662632/?ch=ZDQ1ZDdkZjljMzE0ZmY4YjI1MjVjMWRkNDBlM2E0ODI%3D"
+          >klicken Sie hier.</a
+        >
+      </p>
+
+      <p>
+        Sollte der Link nicht funktionieren, dann kontaktieren Sie mich gerne,
+        dann schalte ich Ihnen den Link frei. Leider hält der Testlink nur 24
+        Stunden und kann nur auf Instagram ausprobiert werden.
+      </p>
+
+     <p> <a href="Game.zip"><b>Hier</b></a> können Sie die Datei auch selber herunterladen, auf <a href="https://sparkar.facebook.com/ar-studio/download/">Spark AR</a>  öffnen und selbst testen </p> 
+     
+        
+
     </div>
   </body>
 </html>
