--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -44,8 +44,8 @@
         damit interagieren?
       </h3>
       <p>
-        Zuallererst auf meinem Instagram Kanal, da der Filter in auf meinem
-        Account gepostet wird. Sobald jemand den Filter in seiner Story nutzt,
+        Zuallererst auf meinem Instagram Kanal, da der Filter auf meinem
+        Account gepostet wird. Sobald jemand den Effekt in seiner Story nutzt,
         wird er verlinkt und andere Nutzer können direkt darauf zugreifen. Je
         nach Interaktionsrate, kann es aber auch passieren, dass der Filter
         unter der “Effekte durchstöbern” angezeigt wird. Dort sind die diese in
@@ -59,18 +59,17 @@
       <h2>
         Customer Journey Map
       </h2>
-      <h3>
-        Erstellen Sie eine Customer Journey Map, um die Touchpoints zwischen dem
-        Produkt (Prototypen) und dem Nutzer zu visualisieren.
-      </h3>
+      <h4 style="margin-bottom: 2%;">
+        Touchpoints zwischen dem Produkt (Prototypen) und dem Nutzer
+      </h4>
       <div class="card card-1">
         <h5>1. Instagram öffnen</h5>
         <div class="cj">
           <p>
-            Storys von abonnierten Usern sind direkt im Blickfeld des Nutzers
+            → Storys von abonnierten Usern sind direkt im Blickfeld des Nutzers
           </p>
-          <p>Der Nutzer klickt auf die erste Story</p>
-          <p>Der Nutzer wird daraufhin von einer zur nächsten weitergeleitet</p>
+          <p>→ Der Nutzer klickt auf die erste Story</p>
+          <p>→ Der Nutzer wird daraufhin von einer zur nächsten Story weitergeleitet</p>
         </div>
         <img
           src="img/cj/main.png"
@@ -84,9 +83,9 @@
       <div class="card card-1">
         <h5>2. Auf Filter stoßen</h5>
         <div class="cj">
-          <p>Storys von Freunden und sonstigen abonnierten Usern anschauen</p>
-          <p>Filter geschickt bekommen per DM</p>
-          <p>Effekt teilen über WhatsApp, Nachrichten, Mail und weitere</p>
+          <p>→ Storys von Freunden und sonstigen abonnierten Usern anschauen</p>
+          <p>→ Filter geschickt bekommen per DM</p>
+          <p>→ Effekt teilen über WhatsApp, Nachrichten, Mail et cetera</p>
         </div>
         <img
           src="img/cj/story.png"
@@ -102,11 +101,11 @@
         <h5>3. Filter öffnen</h5>
         <div class="cj">
           <p>
-            Auf den in der Story verlinkten Filter klicken, um mehr Details zu
+            → Auf den in der Story verlinkten Filter klicken, um mehr Details zu
             öffen
           </p>
           <p>
-            Dort werden dem Nutzer verschiedene Optionen geboten, um den Filter
+            → Dort werden dem Nutzer verschiedene Optionen geboten, um den Filter
             auszuprobieren und zu teilen sowie neue Filter zu entdecken
           </p>
         </div>
@@ -124,11 +123,11 @@
         <h5>4. Filter ausprobieren</h5>
         <div class="cj">
           <p>
-            Eine der Optionen ist, den Filter auf der eigenen Kamera
+            → Eine der Optionen ist, den Filter auf der eigenen Kamera
             ausprobieren und ein Bild oder Video in Story teilen
           </p>
           <p>
-            Eventuell den Filter speichern, um ihn zu einem späterem Zeitpunkt
+            → Eventuell den Filter speichern, um ihn zu einem späterem Zeitpunkt
             wiederzufinden
           </p>
         </div>
@@ -146,7 +145,7 @@
         <h5>5. Filter verschicken</h5>
         <div class="cj">
           <p>
-            Hier kann der Nutzer den Filter über verschieden Plattformen
+            → Hier kann der Nutzer den Filter über verschieden Plattformen
             weiterleiten
           </p>
         </div>
@@ -164,7 +163,7 @@
         <h5>6. Effektlink teilen</h5>
         <div class="cj">
           <p>
-            Hier kann der Nutzer den Filter über Instagram Direct Message
+            → Hier kann der Nutzer den Filter über Instagram Direct Message
             weiterleiten
           </p>
         </div>
@@ -182,7 +181,7 @@
         <h5>7. Effekte durchstöbern</h5>
         <div class="cj">
           <p>
-            Hier kann der Nutzer Filter und User suchen sowie in Kategorien
+            → Hier kann der Nutzer Filter und User suchen sowie in Kategorien
             stöbern
           </p>
         </div>
@@ -200,7 +199,7 @@
         <h5>8. Mehr Filter vom Creator</h5>
         <div class="cj">
           <p>
-            Hier kann der Nutzer die weiteren Filter des Creators durchstöbern
+            → Hier kann der Nutzer die weiteren Filter des Creators durchstöbern
           </p>
         </div>
         <img
@@ -418,22 +417,25 @@
       <h2>Endprodukt</h2>
 
       <p>
-        Um den finalen AR-Filter selbst auszuprobieren, <a
+        Um den finalen AR-Filter selbst auszuprobieren,
+        <a
           href="https://www.instagram.com/ar/1581908498662632/?ch=ZDQ1ZDdkZjljMzE0ZmY4YjI1MjVjMWRkNDBlM2E0ODI%3D"
           >klicken Sie hier.</a
         >
       </p>
 
       <p>
-        Sollte der Link nicht funktionieren, dann kontaktieren Sie mich gerne,
-        dann schalte ich Ihnen den Link frei. Leider hält der Testlink nur 24
-        Stunden und kann nur auf Instagram ausprobiert werden.
+        Leider hält der Testlink nur 24 Stunden und kann nur auf Instagram
+        ausprobiert werden. Kontaktieren Sie mich gerne und ich schalte Ihnen
+        den Link nochmals frei.
       </p>
 
-     <p> <a href="Game.zip"><b>Hier</b></a> können Sie die Datei auch selber herunterladen, auf <a href="https://sparkar.facebook.com/ar-studio/download/">Spark AR</a>  öffnen und selbst testen </p> 
-     
-        
-
+      <p>
+        <a href="Game.zip">Hier</a> können Sie die Datei auch
+        herunterladen, auf
+        <a href="https://sparkar.facebook.com/ar-studio/download/">Spark AR</a>
+        öffnen und selbst testen.
+      </p>
     </div>
   </body>
 </html>
