--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -186,7 +186,7 @@
           </p>
         </div>
         <img
-          src="img/cj/stöbern.png"
+          src="img/cj/stoebern.png"
           alt="Feed"
           style="width: 38%; margin-bottom: 0%;position: absolute;
                     margin: auto;
