--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -124,10 +124,10 @@
         <div class="cj">
           <p>
             → Eine der Optionen ist, den Filter auf der eigenen Kamera
-            ausprobieren und ein Bild oder Video in Story teilen
+            auszuprobieren und ein Bild oder Video in der Story zu teilen
           </p>
           <p>
-            → Eventuell den Filter speichern, um ihn zu einem späterem Zeitpunkt
+            → Eventuell wird der Filter gespeichert, um ihn zu einem späterem Zeitpunkt
             wiederzufinden
           </p>
         </div>
@@ -145,7 +145,7 @@
         <h5>5. Filter verschicken</h5>
         <div class="cj">
           <p>
-            → Hier kann der Nutzer den Filter über verschieden Plattformen
+            → Hier kann der Nutzer den Filter über verschiedene Plattformen
             weiterleiten
           </p>
         </div>
@@ -267,7 +267,7 @@
 
       <h6>Welche und wie viele Teilnehmer gibt es?</h6>
       <p>
-        Vier Teilnehmer (aus dem Medienbereich und anderen Bereichen (nicht
+        Vier Teilnehmer aus dem Medienbereich und anderen Bereichen (nicht
         medien bewandt)
       </p>
 
@@ -276,7 +276,7 @@
 
       <h6>Welche Aufgaben sollen die Probanden lösen?</h6>
       <p>
-        Der AR-Filter soll ausprobiert werden mit und mit der
+        Der AR-Filter soll ausprobiert werden und mit der
         Think-Aloud-Methode laut dokumentiert werden. Im Anschluss soll ein
         Fragebogen ausgefüllt werden.
       </p>
@@ -308,7 +308,7 @@
         Im ersten Schritt sollen die Probanden selbstständig den Filter öffnen
         und benutzen. Dabei sollen sie mit der Think-Aloud-Methode Ihre Gedanken
         laut dokumentieren. So werden realitätsnahe Ergebnisse darüber gewonnen,
-        wie die Probanden unter dem Eindruck der vertrauten Umgebung reagiert.
+        wie die Probanden unter dem Eindruck der vertrauten Umgebung reagieren.
       </p>
 
       <div class="videobox2">
