--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -345,7 +345,7 @@
         </li>
         <li>verstehen nicht direkt wie man abstimmt, bzw. Ziel des Spiels</li>
         <li>
-          Warum ist nur bei einer Person der Text übern Kopf” → bei beiden bzw.
+          "Warum ist nur bei einer Person der Text übern Kopf” → bei beiden bzw.
           über beiden
         </li>
         <li>
@@ -364,14 +364,14 @@
           <li>"Stimmt ab, auf wen die Aussage eher zutrifft."</li>
         </ul>
         <li>
-          Die Frage soll entweder zwischen den Köpfen platziert werden statt nur
+          Die Frage soll zwischen/über den Köpfen platziert werden statt nur
           auf einer Person fixiert zu sein
         </li>
 
         <li>
           Positiv aufgenommen, dass der Filter für zwei User ausgelegt ist
         </li>
-        <li>schnelle Reaktionszeit des Filters</li>
+        <li>schnelle Reaktionszeit des Filters positiv</li>
         <li>
           Adjektive: spaßig, farbenfroh, aktuell, einfach, unkompliziert,
           interessant, schnell
